--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dongle&family=Slackey&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bangers&family=Barrio&family=Hanalei+Fill&family=Matemasie&family=Mystery+Quest&family=Rubik:ital,wght@0,300..900;1,300..900&family=Slackey&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
