--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Bangers&family=Barrio&family=Hanalei+Fill&family=Matemasie&family=Mystery+Quest&family=Rubik:ital,wght@0,300..900;1,300..900&family=Slackey&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/svg+xml" href="/favIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Funzy Onesies!</title>
   </head>
